--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Adopt a pet!</h1>
     <h2>They're sad and lonely. So are you.</h2>
 
-    <div class="pcolumn">
+    <!-- <div class="pcolumn">
       <img src="img/bird.jpeg" alt="pet bird" class="petimg">
     </div>
     <div class="pcolumn">
@@ -20,27 +20,35 @@
     </div>
     <div class="pcolumn">
       <img src="img/fish.jpeg" alt="pet fish" class="petimg">
-    </div>
+    </div> -->
 
 
 
     <div class="adopt">
       <div class="bird">
+        <img src="img/bird.jpeg" alt="pet bird" class="petimg">
+        <p class="pet-name">Hello my name is Pretty Bird</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan in. Urna et pharetra pharetra massa massa ultricies. Neque ornare aenean euismod elementum nisi. Purus in massa tempor nec feugiat. Aliquet lectus proin nibh nisl condimentum id. Fermentum iaculis eu non diam. Nec ullamcorper sit amet risus nullam eget. Urna id volutpat lacus laoreet non curabitur. Eget nunc lobortis mattis aliquam faucibus purus in. Sed vulputate odio ut enim blandit. Est ultricies integer quis auctor.</p>
       </div>
     </div>
     <div class="adopt">
       <div class="cat">
+        <img src="img/cat.jpeg" alt="pet cat" class="petimg">
+        <p class="pet-name">Hello my name is Mini Boss</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan in. Urna et pharetra pharetra massa massa ultricies. Neque ornare aenean euismod elementum nisi. Purus in massa tempor nec feugiat. Aliquet lectus proin nibh nisl condimentum id. Fermentum iaculis eu non diam. Nec ullamcorper sit amet risus nullam eget. Urna id volutpat lacus laoreet non curabitur. Eget nunc lobortis mattis aliquam faucibus purus in. Sed vulputate odio ut enim blandit. Est ultricies integer quis auctor.</p>
       </div>
     </div>
     <div class="adopt">
       <div class="dog">
+        <img src="img/dog.jpeg" alt="pet dog" class="petimg">
+        <p class="pet-name">Hello my name is Bowtie</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan in. Urna et pharetra pharetra massa massa ultricies. Neque ornare aenean euismod elementum nisi. Purus in massa tempor nec feugiat. Aliquet lectus proin nibh nisl condimentum id. Fermentum iaculis eu non diam. Nec ullamcorper sit amet risus nullam eget. Urna id volutpat lacus laoreet non curabitur. Eget nunc lobortis mattis aliquam faucibus purus in. Sed vulputate odio ut enim blandit. Est ultricies integer quis auctor.</p>
       </div>
     </div>
     <div class="adopt">
       <div class="fish">
+        <img src="img/fish.jpeg" alt="pet fish" class="petimg">
+        <p class="pet-name">Hello my name is Tail</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget egestas purus viverra accumsan in. Urna et pharetra pharetra massa massa ultricies. Neque ornare aenean euismod elementum nisi. Purus in massa tempor nec feugiat. Aliquet lectus proin nibh nisl condimentum id. Fermentum iaculis eu non diam. Nec ullamcorper sit amet risus nullam eget. Urna id volutpat lacus laoreet non curabitur. Eget nunc lobortis mattis aliquam faucibus purus in. Sed vulputate odio ut enim blandit. Est ultricies integer quis auctor.</p>
       </div>
     </div>
